# captain-food

./: .gitignore  BACKLOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  render.yaml
.claude/: loop-budget.json  settings.json  settings.local.json
.claude/agents/: generator.md  observability-agent.md  reviewer.md
.claude/hooks/: loop-budget.sh  stop-gate.sh  validate-generated.sh
.claude/skills/structurizr/: SKILL.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-image.yml  ci.yml  codegen-consistency.yml  db-migrate.yml  render-status.yml  sirene-sync.yml
crates/adapters/coopcycle/: Cargo.toml
crates/adapters/coopcycle/src/: acl.rs  config.rs  http.rs  lib.rs  main.rs  outbound.rs  raw.rs
crates/adapters/hubrise/: Cargo.toml
crates/adapters/hubrise/src/: api.rs  enrich.rs  http.rs  lib.rs  main.rs  raw.rs
crates/application/: Cargo.toml
crates/application/src/: commands.rs  lib.rs  pm_state.rs  ports.rs  projections.rs  queries.rs
crates/application/src/process_managers/: cart_binding.rs  delivery_dispatch.rs  place_order.rs
crates/application/src/projectors/: catalog.rs  customer.rs  mod.rs  order_tracking.rs
crates/application/tests/: cart_behaviour.rs  customer_behaviour.rs  delivery_job_behaviour.rs  place_order_behaviour.rs  pm_state_mem.rs  restaurant_behaviour.rs  rider_behaviour.rs
crates/core/: Cargo.toml
crates/desktop/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: aggregate.rs  cart.rs  delivery_job.rs  lib.rs  payment.rs  restaurant.rs  rider.rs  shared.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/integrations/: google.rs  inbound_drain_worker.rs  mod.rs  sirene.rs  supabase_auth.rs  sync_sirene_worker.rs
crates/infrastructure/src/persistence/: cart_store.rs  customer.rs  customer_store.rs  delivery.rs  enum_sql.rs  event_bus.rs  event_store.rs  mod.rs  order_tracking_store.rs  pm_state.rs  prospection.rs  prospection_store.rs  referential.rs  restaurant.rs  restaurant_store.rs
crates/infrastructure/src/process_manager/: runner.rs
crates/infrastructure/src/projection/: mod.rs  worker.rs
crates/infrastructure/tests/: cart_projection.rs  catalog_projection.rs  customer_projection.rs  delivery_read_model.rs  prospection_projection.rs  referential_policies.rs  restaurant_locations_by_account.rs  restaurant_projection.rs  restaurant_write_path.rs  sirene_registration.rs  sync_sirene_worker.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  lib.rs  main.rs
crates/server/src/graphql/: acl.rs  mod.rs  routes.rs  schema.rs  session.rs
crates/server/tests/: graphql_acl.rs  graphql_subscriptions.rs  graphql_write_path.rs
crates/shared_types/: Cargo.toml
crates/sirene_ingest/: Cargo.toml
crates/sirene_ingest/src/: client.rs  lib.rs  main.rs  staging.rs  wire.rs
crates/sirene_ingest/tests/: staging_upsert.rs
crates/web/: Cargo.toml
crates/web/src/: actions.rs  checkout.rs  graphql.rs  lib.rs  renderer.rs  session.rs  stripe.rs  subscriptions.rs  tracking.rs
docs/: BACKLOG.md  PLAYBOOK.md  STATUS.md  codegen-roadmap.md  process-manager-rearchitecture.md  sagas.md  status.html
docs/adr/: 0001-dsl-yaml-as-source-of-truth.md  0002-codegen-referential-validation.md  0003-semver-per-dsl-file.md  0004-commands-derived-from-use-cases.md  0005-read-models-as-projections.md  0006-graphql-role-as-path-acl.md  0007-behaviour-tests-in-dsl.md  0008-c4-as-source-managed-dsl.md  0009-observability-contracts-in-dsl.md  0010-plan-execute-separation-and-gates.md  0011-agent-topology.md  0012-domain-infra-observability-separation.md  0013-structurizr-mermaid-c4-generation.md  0014-weekly-loop-budget.md  0015-wrap-supabase-auth-behind-graphql.md  0016-proportional-captain-service-fee.md  0017-3way-stripe-connect-split.md  0018-transparent-checkout-fee-display.md  0019-restaurant-pre-registration-sirene-google.md  0020-restaurant-sync-cron-prospection.md  0021-google-business-profile-order-button.md  0022-uber-eats-price-comparison.md  0023-uber-eats-real-prices-hubrise-optin.md  0024-uber-eats-price-estimation.md  0025-amount-split-pedagogical-display.md  0026-ai-automation-tooling.md  0027-restaurant-pre-registration-prospection-model.md  0029-multi-recipient-tips-model.md  0030-uber-eats-comparison-model.md  0031-delivery-bounded-context.md  0032-business-rules-and-completeness-gates.md  0033-spec-driven-sdui-customer-screens.md  0034-full-stack-rust.md  0035-project-structure-clean-architecture.md  0036-domain-topology-single-origin-identity.md  0037-spec-organization-schema-driven-codegen.md  0038-test-mode-non-production-entities.md  0039-projection-views-generated-from-lineage.md  0040-materialized-read-model-tables-projectors.md  0042-hosting-render-supabase-frankfurt.md  (+29 more)
docs/claude/: adr.md  c4.md  codegen.md  dsl.md  loops.md  observability.md
docs/frontend/: renderer-architecture.md
docs/proposals/: delivery-delay-satisfaction-survey.md
migrations/: 20260717120000_domain_schema.sql  20260717170000_projection_checkpoint.sql  20260717180000_seed_referential_policies.sql  20260719200000_process_manager_state_tables.sql
specs/: ARCHITECTURE_OVERVIEW.md  PRODUCT_SPEC_WEB_CLIENT.md  actors.yaml  api.yaml  commands.yaml  customer_screens.yaml  database.md  entities.yaml  errors.yaml  events.yaml  observability.yaml  processmanager.yaml  rules.yaml  scalars.yaml  schema.graphql  services.yaml  stories.yaml  story-map.md  tests.yaml  traceability.md  views.yaml
specs/architecture/: c4-l2.yaml  c4-l3.yaml
specs/database/: projection_views.yaml  views.yaml
specs/integrations/: avelo37.md  coopcycle.md  hubrise.md  supabase.md
specs/screens/: customer_screens.yaml  restaurant_frontoffice.yaml
tools/codegen/: README.md  package-lock.json  package.json  tsconfig.json
tools/codegen-rs/: Cargo.toml
tools/codegen-rs/src/: main.rs
tools/smoke/: prod-smoke.sh
(+26 files in other folders)
