[package]
name = "domain"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Captain.Food pure domain (DDD): aggregates, commands, events, policies, value objects, typed IDs. Depends on NO other workspace crate (ADR-0035). serde derives are allowed on events/value objects (decision 1); serialization logic stays in the ACL."

[dependencies]
serde = { workspace = true }
# serde_json carries the structured rejection CONTEXT (`DomainError::Rejected`) — data, not
# serialization logic; the errors.yaml catalog module generated into `generated/errors.rs`
# interpolates its `{placeholder}` message templates from it.
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
