[package]
name = "infrastructure"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Captain.Food infrastructure: adapters implementing the application ports — the event store (append to domain_events), read-model repos over the materialized projection tables, the app-layer projection worker (ADR-0040), and the integrations ACL (HubRise/Stripe/delivery). Depends on `application` + `domain` (ADR-0035)."

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
# `v5` on top of the workspace features: the SIRENE ACL derives DETERMINISTIC restaurant ids
# (UUIDv5 of the SIRET) so re-running the sync is idempotent across runs (integrations/sirene).
uuid = { workspace = true, features = ["v5"] }
# `chrono`/`uuid`/`json` bind the RestaurantRow column types (TIMESTAMPTZ/UUID/JSONB) on top of the
# workspace-pinned runtime/tls/postgres features (queries run over the session pooler, so plain
# prepared statements are fine).
sqlx = { workspace = true, features = ["chrono", "uuid", "json"] }
# Only the timer is needed at runtime (the projection worker's polling loop); the workspace feature set
# also carries rt/macros used by the integration test.
tokio = { workspace = true }
# HTTP client for the SIRENE ACL (integrations/sirene). default-features off + native-tls for the same
# reason as the workspace sqlx TLS choice: SChannel on Windows dev boxes (no C toolchain), OpenSSL on
# the Linux CI/Render images (libssl is present).
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
