[package]
name = "captain-food-codegen"
version = "0.1.0"
edition = "2021"
description = "Captain.Food spec validator + artifact generator (ADR-0034) — the single codegen gate. Full validator (§1–§11) + all emitters. Began as a TypeScript tool (tools/codegen), ported to Rust at parity (byte-identical artifacts + identical validation issue set); the TypeScript codegen has since been retired."

# The decision doc calls the entry `scripts/generate.rs`; here it is a proper Cargo binary named `generate`.
[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# preserve_order: JSON.stringify keeps object insertion order; match it (map/desc payloads in the HTML doc).
serde_json = { version = "1", features = ["preserve_order"] }
