[package]
name = "coopcycle-adapter"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "CoopCycle delivery-partner adapter (issue #58, ADR-20260721-122910): the third DeliveryProvider=PARTNER vertical slice, mirroring avelo37-adapter. FEDERATION — a per-instance registry (base URL + OAuth2 client-credentials + webhook secret per self-hosted co-op, env-gated by COOPCYCLE_INSTANCES): the ACL (per-instance CoopCycle-Signature verification + co-op-event mapping + idempotent two-layer-inbox ingestor) and its HTTP shell (POST /adapters/coopcycle/{instance}/webhooks), plus the OUTBOUND DeliveryService client (offer_job with postal-prefix instance resolution + OAuth2 token manager). Exposes routes() for the monolith to mount, and a standalone coopcycle-webhook binary."

[[bin]]
name = "coopcycle-webhook"
path = "src/main.rs"

[dependencies]
# Inner layers only (dependency rule): the ACL maps CoopCycle shapes onto domain events via the
# application inbox port — it does NOT depend on `infrastructure` for its logic.
application = { path = "../../application" }
domain = { path = "../../domain" }
# The standalone binary (main.rs) constructs concrete Postgres adapters.
infrastructure = { path = "../../infrastructure" }

axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v5", "v7"] }
chrono = { workspace = true }
# Signature verification (same versions as the workspace's other HMAC users).
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# The outbound DeliveryService impl is an async trait; same crate the application port uses.
async-trait = { workspace = true }
# Outbound CoopCycle API client (offer delivery jobs + OAuth2 token). Same crate + features as the
# Stripe/HubRise/Avelo37 outbound clients.
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
