[package]
name = "hubrise-adapter"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "HubRise partner adapter (ADR-20260718-213352): a self-contained vertical slice — the ACL (X-HubRise-Hmac-SHA256 verification + callback envelope) and its HTTP shell (POST /webhooks/hubrise). Verified ingress only for now; the domain enrichment (OAuth API pull → OfferStockUpdated/ImportCatalog) will add `application`/`infrastructure` deps later. Exposes `routes()` and a standalone `hubrise-webhook` binary for independent deployment."

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Signature verification.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# Outbound OAuth2 API client (domain enrichment: pull catalog/inventory). default-features off +
# native-tls to match the workspace TLS choice.
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
